--- a/src/style.css
+++ b/src/style.css
@@ -66,6 +66,11 @@ dialog {
   padding: 32px;
   background-color: var(--white);
   border-radius: 8px;
+  border: none;
+}
+
+#endgame h2 {
+  color: black;
 }
 
 #place-ships {
@@ -217,6 +222,8 @@ dialog {
 .col {
   display: flex;
   flex-direction: column;
+  align-items: center;
+  justify-content: center;
   gap: 16px;
 }
 
